   database.
 o Fixes in the mapToGenome method:
   - Works also for negative strand encoded proteins (issue #29).
   - Supports a GRangesList object with arbitrary mcols.
   - Faster implementation (issue #30).
 o mapToGenome,Proteins,EnsDb and pmapToGenome,Proteins,EnsDb methods that
   map peptide features to the genome using annotations fetched from an EnsDb.

CHANGES IN VERSION 0.15.1
-------------------------
 o Drop unique `seqnames` requirement; see #28, #32
 o Create `names` as synonym for `seqnames`; close #32

CHANGES IN VERSION 0.13.3
-------------------------
 o Update mapping vignette index entry, as suggested by Mike Love
   <2016-09-13 Tue>

CHANGES IN VERSION 0.13.0
-------------------------
 o Bioc devel

CHANGES IN VERSION 0.11.3
-------------------------
 o acols and pranges replacement method <2016-02-22 Mon>

CHANGES IN VERSION 0.11.2
-------------------------
 o add addPeptideFragments; see #24 for details [2016-02-07 Sun]

CHANGES IN VERSION 0.11.1
-------------------------
 o elementLengths was renamed -> elementNROWS in S4Vectors (new name
   reflects TRUE semantic, old name will be deprecated soon) [r113044
   | hpages@fhcrc.org | 2016-01-29 01:22:03 +0000 (Fri, 29 Jan 2016)]

CHANGES IN VERSION 0.11.0
-------------------------
 o New Bioc devel version

CHANGES IN VERSION 0.10.0
-------------------------
 o New Bioc release version

CHANGES IN VERSION 0.9.1
------------------------
 o update cleave method to address build error [2015-10-13 Tue]

CHANGES IN VERSION 0.9.0
------------------------
 o Bioc devel 3.2

CHANGES IN VERSION 0.8.0
------------------------
 o Bioc release 3.1

CHANGES IN VERSION 0.6.13
-------------------------
 o Updating Biomart query to reflect changes [2015-04-06 Mon]

CHANGES IN VERSION 0.6.12
-------------------------
 o Fix filling in tracks plots [2015-03-07 Sat]

CHANGES IN VERSION 0.6.11
-------------------------
 o Documentation for the plotting heler functions [2015-02-28 Sat]

CHANGES IN VERSION 0.6.10